--- a/tests/serverspec/default.yml
+++ b/tests/serverspec/default.yml
@@ -1,6 +1,121 @@
 ---
 - hosts: localhost
   roles:
+    - role: trombik.freebsd_pkg_repo
+      when: ansible_os_family == "FreeBSD"
+    - role: trombik.sysctl
     - ansible-role-opendistroforelasticsearch
   vars:
-    opendistroforelasticsearch_config: ""
+    freebsd_pkg_repo:
+      local:
+        enabled: "true"
+        url: http://192.168.43.75/packages/12_0-trombik/
+        mirror_type: none
+        priority: 100
+        state: present
+    os_sysctl:
+      FreeBSD:
+        kern.maxfilesperproc: 65536
+        security.bsd.unprivileged_mlock: 1
+    sysctl: "{{ os_sysctl[ansible_os_family] }}"
+    opendistroforelasticsearch_flags: |
+      elasticsearch_java_home='{{ opendistroforelasticsearch_java_home }}'
+    opendistroforelasticsearch_jvm_options: |
+      -Xms1024m
+      -Xmx1024m
+      -Xmx1g
+      -XX:+UseConcMarkSweepGC
+      -XX:CMSInitiatingOccupancyFraction=75
+      -XX:+UseCMSInitiatingOccupancyOnly
+      -Des.networkaddress.cache.ttl=60
+      -Des.networkaddress.cache.negative.ttl=10
+      -XX:+AlwaysPreTouch
+      -Xss1m
+      -Djava.awt.headless=true
+      -Dfile.encoding=UTF-8
+      -Djna.nosys=true
+      -XX:-OmitStackTraceInFastThrow
+      -Dio.netty.noUnsafe=true
+      -Dio.netty.noKeySetOptimization=true
+      -Dio.netty.recycler.maxCapacityPerThread=0
+      -Dlog4j.shutdownHookEnabled=false
+      -Dlog4j2.disable.jmx=true
+      -Djava.io.tmpdir=${ES_TMPDIR}
+      -XX:+HeapDumpOnOutOfMemoryError
+      -XX:HeapDumpPath=data
+      -XX:ErrorFile=logs/hs_err_pid%p.log
+      -XX:+UseCompressedOops
+      8:-XX:+PrintGCDetails
+      8:-XX:+PrintGCDateStamps
+      8:-XX:+PrintTenuringDistribution
+      8:-XX:+PrintGCApplicationStoppedTime
+      8:-Xloggc:${ES_TMPDIR}/gc.log
+      8:-XX:+UseGCLogFileRotation
+      8:-XX:NumberOfGCLogFiles=32
+      8:-XX:GCLogFileSize=64m
+      9-:-Xlog:gc*,gc+age=trace,safepoint:file=logs/gc.log:utctime,pid,tags:filecount=32,filesize=64m
+      9-:-Djava.locale.providers=COMPAT
+    opendistroforelasticsearch_config:
+      opendistro_security.disabled: true
+      discovery.type: single-node
+      network.publish_host: ["10.0.2.15"]
+      path.data: "{{ opendistroforelasticsearch_db_dir }}"
+      http.port: "{{ opendistroforelasticsearch_http_port }}"
+      path.logs: "{{ opendistroforelasticsearch_log_dir }}"
+      node.data: "true"
+      http.compression: "true"
+      network.host:
+        - _local_
+        - _site_
+      cluster.name: testcluster
+      node.name: testnode
+      http.cors.enabled: "true"
+      http.cors.allow-origin: "*"
+      http.cors.max-age: 86400
+      http.cors.allow-methods: "OPTIONS, HEAD, GET, POST, PUT, DELETE"
+      http.cors.allow-headers: "X-Requested-With, Content-Type, Content-Length"
+      http.cors.allow-credentials: "true"
+    opendistroforelasticsearch_plugins:
+      - name: opendistro_security
+        src: https://d3g5vo6xdbdb9a.cloudfront.net/downloads/elasticsearch-plugins/opendistro-security/opendistro_security-1.2.0.0.zip
+    opendistroforelasticsearch_extra_files:
+      - path: opendistro_security/securityconfig/roles.yml
+        type: yaml
+        content:
+          _meta:
+            type: roles
+            config_version: 2
+      - path: opendistro_security/securityconfig/roles_mapping.yml
+        type: yaml
+        content:
+          _meta:
+            type: rolesmapping
+            config_version: 2
+      - path: opendistro_security/securityconfig/internal_users.yml
+        type: yaml
+        content:
+          _meta:
+            type: "internalusers"
+            config_version: 2
+          new-user:
+            # XXX the hash is created by tools/hash.sh
+            hash: "$2y$12$88IFVl6IfIwCFh5aQYfOmuXVL9j2hz/GusQb35o.4sdTDAEMTOD.K"
+            reserved: false
+            hidden: false
+            backend_roles:
+              - "some-backend-role"
+            attributes:
+              attribute1: "value1"
+            static: false
+          admin:
+            hash: "$2y$12$88IFVl6IfIwCFh5aQYfOmuXVL9j2hz/GusQb35o.4sdTDAEMTOD.K"
+            reserved: true
+            backend_roles:
+              - admin
+            description: "Demo admin user"
+      - path: opendistro_security/securityconfig/config.yml
+        type: yaml
+        content:
+          http_authenticator:
+            type: basic
+            challenge: true
