--- a/vars/FreeBSD.yml
+++ b/vars/FreeBSD.yml
@@ -1,3 +1,13 @@
 ---
-__opendistroforelasticsearch_db_dir: /var/db/opendistroforelasticsearch
-__opendistroforelasticsearch_conf_dir: /usr/local/etc/opendistroforelasticsearch
+__opendistroforelasticsearch_user: elasticsearch
+__opendistroforelasticsearch_group: elasticsearch
+__opendistroforelasticsearch_log_dir: /var/log/elasticsearch
+__opendistroforelasticsearch_db_dir: /var/db/elasticsearch
+__opendistroforelasticsearch_package: textproc/opendistroforelasticsearch
+__opendistroforelasticsearch_conf_dir: /usr/local/etc/elasticsearch
+__opendistroforelasticsearch_scripts_dir: ""
+__opendistroforelasticsearch_plugins_dir: "/usr/local/lib/elasticsearch/plugins"
+__opendistroforelasticsearch_plugin_command: /usr/local/lib/elasticsearch/bin/elasticsearch-plugin
+__opendistroforelasticsearch_service: elasticsearch
+__opendistroforelasticsearch_jvm_options_dir: /usr/local/etc
+__opendistroforelasticsearch_java_home: /usr/local
