--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -1,9 +1,19 @@
 ---
-opendistroforelasticsearch_user: opendistroforelasticsearch
-opendistroforelasticsearch_group: opendistroforelasticsearch
-opendistroforelasticsearch_log_dir: /var/log/opendistroforelasticsearch
+opendistroforelasticsearch_user: "{{ __opendistroforelasticsearch_user }}"
+opendistroforelasticsearch_group: "{{ __opendistroforelasticsearch_group }}"
+opendistroforelasticsearch_log_dir: "{{ __opendistroforelasticsearch_log_dir }}"
 opendistroforelasticsearch_db_dir: "{{ __opendistroforelasticsearch_db_dir }}"
-opendistroforelasticsearch_service: opendistroforelasticsearch
+opendistroforelasticsearch_scripts_dir: "{{ __opendistroforelasticsearch_scripts_dir }}"
+opendistroforelasticsearch_plugins_dir: "{{ __opendistroforelasticsearch_plugins_dir }}"
+opendistroforelasticsearch_plugin_command: "{{ __opendistroforelasticsearch_plugin_command }}"
+opendistroforelasticsearch_plugins: []
+opendistroforelasticsearch_service: "{{ __opendistroforelasticsearch_service }}"
+opendistroforelasticsearch_package: "{{ __opendistroforelasticsearch_package }}"
 opendistroforelasticsearch_conf_dir: "{{ __opendistroforelasticsearch_conf_dir }}"
-opendistroforelasticsearch_conf_file: "{{ __opendistroforelasticsearch_conf_dir }}/opendistroforelasticsearch.conf"
+opendistroforelasticsearch_jvm_options: ""
+opendistroforelasticsearch_conf_file: "{{ opendistroforelasticsearch_conf_dir }}/elasticsearch.yml"
 opendistroforelasticsearch_flags: ""
+opendistroforelasticsearch_config: ""
+opendistroforelasticsearch_http_port: 9200
+opendistroforelasticsearch_java_home: "{{ __opendistroforelasticsearch_java_home }}"
+opendistroforelasticsearch_extra_files: []
