--- a/meta/main.yml
+++ b/meta/main.yml
@@ -2,7 +2,7 @@
 galaxy_info:
   role_name: opendistroforelasticsearch
   author: Tomoyuki Sakurai
-  description: Configures something
+  description: Configures opendistroforelasticsearch
   company: N/A
   license: BSD
   min_ansible_version: 2.0
@@ -11,4 +11,4 @@ galaxy_info:
       versions:
         - 12.0
   galaxy_tags:
-    - system
+    - elasticsearch
