bugfix: remove configure-jvm-FreeBSD.yml

--- a/tasks/install-FreeBSD.yml
+++ b/tasks/install-FreeBSD.yml
@@ -4,3 +4,12 @@
   pkgng:
     name: "{{ opendistroforelasticsearch_package }}"
     state: present
+
+- name: Create rc.subr flagment
+  template:
+    src: FreeBSD.rc.j2
+    dest: /etc/rc.conf.d/opendistroforelasticsearch
+    mode: 0644
+    validate: sh -n %s
+  notify:
+    - Restart opendistroforelasticsearch
