--- a/.yamllint.yml
+++ b/.yamllint.yml
@@ -8,5 +8,5 @@ rules:
 ignore: |
   # yamllint does not understand erb template
   .kitchen.local.yml
-  extra_roles/*
+  /extra_roles/*
   /.kitchen/*
