bugfix: more specs on file permission
remove `java` process specs because there might be multiple java
processes as in the case on Ubuntu.

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -43,6 +43,9 @@
   template:
     src: jvm.options.j2
     dest: "{{ opendistroforelasticsearch_conf_dir }}/jvm.options"
+    owner: "{{ opendistroforelasticsearch_user }}"
+    group: "{{ opendistroforelasticsearch_group }}"
+    mode: 0644
   notify:
     - Restart opendistroforelasticsearch
 
