bugfix: support CentOS

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -39,6 +39,11 @@ platforms:
       box: trombik/ansible-ubuntu-18.04-amd64
       box_check_update: false
 
+  - name: centos-7.4-amd64
+    driver:
+      box: trombik/ansible-centos-7.4-x86_64
+      box_check_update: false
+
 suites:
   - name: default
     provisioner:
