--- a/tasks/install-RedHat.yml
+++ b/tasks/install-RedHat.yml
@@ -1,11 +1,20 @@
 ---
 
-- name: Install Java 8
+- name: Install opendistroforelasticsearch_extra_packages
   yum:
-    name: java-1.8.0-openjdk.x86_64
+    name: "{{ opendistroforelasticsearch_extra_packages }}"
     state: present
 
-- name: Install elasticsearch
+- name: Install opendistroforelasticsearch_package
   yum:
-    name: elasticsearch
+    name: "{{ opendistroforelasticsearch_package }}"
     state: present
+
+- name: Create /etc/sysconfig/elasticsearch
+  template:
+    src: RedHat.sysconfig.j2
+    dest: /etc/sysconfig/elasticsearch
+    owner: root
+    group: root
+    mode: 0644
+    validate: sh -n %s
