feature: support TLS
unlike other roles,
opendistroforelasticsearch_include_role_x509_certificate is `yes` by
default because the official documentation states that "TLS is optional
for the REST layer and mandatory for the transport layer".

https://opendistro.github.io/for-elasticsearch-docs/docs/security-configuration/tls/

--- a/defaults/main.yml
+++ b/defaults/main.yml
@@ -18,3 +18,4 @@ opendistroforelasticsearch_config: ""
 opendistroforelasticsearch_http_port: 9200
 opendistroforelasticsearch_java_home: "{{ __opendistroforelasticsearch_java_home }}"
 opendistroforelasticsearch_extra_plugin_files: []
+opendistroforelasticsearch_include_role_x509_certificate: yes
