--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -88,7 +88,7 @@
   with_items: "{{ opendistroforelasticsearch_plugins }}"
   when:
     - "(not 'state' in item ) or (item['state'] == 'present')"
-    - "not (shell_output.stdout | search(item['name']))"
+    - "not (shell_output.stdout is search(item['name']))"
 
 - name: Create basedir of opendistroforelasticsearch_extra_plugin_files
   file:
