bugfix: bump box version, use my package tree, and fix ubuntu build

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -23,16 +23,16 @@ provisioner:
     - filter_plugins
 
 platforms:
-  - name: freebsd-12.0-amd64
+  - name: freebsd-12.1-amd64
     driver:
-      box: trombik/ansible-freebsd-12.0-amd64
+      box: trombik/ansible-freebsd-12.1-amd64
       box_check_update: false
     driver_config:
       ssh:
         shell: '/bin/sh'
     provisioner:
       extra_vars:
-        ansible_python_interpreter: '/usr/local/bin/python'
+        ansible_python_interpreter: '/usr/local/bin/python3'
 
   - name: ubuntu-18.04-amd64
     driver:
