--- a/tests/serverspec/default.yml
+++ b/tests/serverspec/default.yml
@@ -40,9 +40,10 @@
     os_opendistroforelasticsearch_extra_packages:
       FreeBSD: []
       Debian:
-        # XXX install 7.6.1 becasue the current opendistroforelasticsearch
-        # depends on 7.6.1, but the latest elasticsearch-oss is not 7.6.1
-        - elasticsearch-oss=7.6.1
+        # XXX install 7.8.0 becasue the current opendistroforelasticsearch
+        # depends on 7.8.0, but the latest elasticsearch-oss is not the
+        # version.
+        - elasticsearch-oss=7.8.0
         - unzip
       RedHat: []
     opendistroforelasticsearch_extra_packages: "{{ os_opendistroforelasticsearch_extra_packages[ansible_os_family] }}"
@@ -150,7 +151,7 @@
       opendistro_security.audit.config.disabled_transport_categories: NONE
     project_opendistro_plugin_base_url: https://d3g5vo6xdbdb9a.cloudfront.net/downloads/elasticsearch-plugins
 
-    # XXX see version matrix athttps://opendistro.github.io/for-elasticsearch-docs/docs/install/plugins/
+    # XXX see version matrix at https://opendistro.github.io/for-elasticsearch-docs/docs/install/plugins/
     opendistroforelasticsearch_plugins:
       - name: opendistro_security
         src: "{{ project_opendistro_plugin_base_url }}/opendistro-security/opendistro_security-1.3.0.0.zip"
@@ -159,18 +160,24 @@
     opendistroforelasticsearch_extra_plugin_files:
       - path: opendistro_security/securityconfig/roles.yml
         type: yaml
+        mode: "0640"
+        group: "{{ opendistroforelasticsearch_user }}"
         content:
           _meta:
             type: roles
             config_version: 2
       - path: opendistro_security/securityconfig/roles_mapping.yml
         type: yaml
+        mode: "0640"
+        group: "{{ opendistroforelasticsearch_user }}"
         content:
           _meta:
             type: rolesmapping
             config_version: 2
       - path: opendistro_security/securityconfig/internal_users.yml
         type: yaml
+        mode: "0640"
+        group: "{{ opendistroforelasticsearch_user }}"
         content:
           _meta:
             type: "internalusers"
@@ -193,12 +200,14 @@
             description: "Demo admin user"
       - path: opendistro_security/securityconfig/config.yml
         type: yaml
+        mode: "0640"
+        group: "{{ opendistroforelasticsearch_user }}"
         content:
           http_authenticator:
             type: basic
             challenge: true
     x509_certificate_debug_log: yes
-    # XXX these keys were create by following the steps described at:
+    # XXX these keys were create by the following steps described at:
     # https://opendistro.github.io/for-elasticsearch-docs/docs/security-configuration/generate-certificates/
     #
     # here is the copy of the steps:
