bugfix: update CentOS to 7.8, Ubuntu to 20.04

--- a/.kitchen.yml
+++ b/.kitchen.yml
@@ -39,9 +39,14 @@ platforms:
       box: trombik/ansible-ubuntu-18.04-amd64
       box_check_update: false
 
-  - name: centos-7.4-amd64
+  - name: ubuntu-20.04-amd64
     driver:
-      box: trombik/ansible-centos-7.4-x86_64
+      box: trombik/ansible-ubuntu-20.04-amd64
+      box_check_update: false
+
+  - name: centos-7.8-amd64
+    driver:
+      box: trombik/ansible-centos-7.8-x86_64
       box_check_update: false
 
 suites:
