--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -54,13 +54,39 @@ task:
   libvirtd_background_script:
     - sleep 2 && /usr/sbin/libvirtd
 
+  setup_ruby_script:
+    - gem install bundler
+    - bundle install --path ${HOME}/.bundler
+
+  setup_python_script:
+    - pip install ansible yamllint molecule
+    - ansible --version
+    - yamllint --version
+    - molecule --version
+
+  setup_vagrant_script:
+    - wget https://releases.hashicorp.com/vagrant/2.2.14/vagrant_2.2.14_x86_64.deb
+    - dpkg -i vagrant_2.2.14_x86_64.deb
+    - vagrant --version
+
   # Execute automated tests
   test_script:
-    - cd ansible/tests
-    - make test
+
+    # Create ansible.cfg with correct roles_path
+    - mkdir -p extra_roles
+    - printf '[defaults]\nstdout_callback = yaml\nroles_path=../:extra_roles' >ansible.cfg
+
+    # Download depended roles
+    - if [ -f requirements.yml ]; then ansible-galaxy install -r requirements.yml -p extra_roles; fi
+    - if [ -f requirements.yml ]; then ansible-galaxy collection install -r requirements.yml -p collections; fi
+
+    # run test
+    - bundle exec kitchen list
 
   # Debugging information
   always:
+    env_debug_script:
+      - env | sort
     cache_debug_script:
       - find "$HOME/cache" -type f || echo "Exit code: $?"
     kvm_debug_script:
