ci: install required packages

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -53,6 +53,10 @@ task:
     - mkdir -p /var/run/dbus
     - /usr/bin/dbus-daemon --system --nofork --nopidfile
 
+
+  setup_packages_script:
+    - apt-get install wget ruby
+
   setup_vagrant_script:
     - wget https://releases.hashicorp.com/vagrant/2.2.14/vagrant_2.2.14_x86_64.deb
     - dpkg -i vagrant_2.2.14_x86_64.deb
